fix: 인증/권한/채팅 보안 및 설정 개선