@@ -15,8 +15,8 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,23 +33,17 @@ public class ChatService {
     public List<ChatRoomDto> getMyRooms(Long userId) {
         return chatRoomRepository.findRoomsByUserId(userId).stream()
                 .map(ChatRoomDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ChatMessageDto> getMessageHistory(Long roomId, Long userId) {
-        ChatRoom room = chatRoomRepository.findById(roomId)
-                .orElseThrow(() -> new IllegalArgumentException("채팅방을 찾을 수 없습니다."));
+        ChatRoom room = getRoom(roomId);
+        ensureParticipant(room, userId);
 
-        boolean isParticipant = companionParticipantRepository
-                .existsByCompanionPostIdAndUserId(room.getCompanionPost().getId(), userId);
-        if (!isParticipant) {
-            throw new IllegalStateException("해당 채팅방에 접근 권한이 없습니다.");
-        }
-
-        return chatMessageRepository.findByRoomIdOrderByCreatedAtAsc(
-                roomId, PageRequest.of(0, MESSAGE_HISTORY_LIMIT)).stream()
+        return chatMessageRepository.findRecentByRoomId(roomId, PageRequest.of(0, MESSAGE_HISTORY_LIMIT)).stream()
                 .map(ChatMessageDto::from)
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(ChatMessageDto::getCreatedAt))
+                .toList();
     }
 
     @Transactional
@@ -60,8 +54,9 @@ public class ChatService {
 
     @Transactional
     public ChatMessageDto saveAndBroadcast(Long roomId, Long senderId, String content, ChatMessage.MessageType type) {
-        ChatRoom room = chatRoomRepository.findById(roomId)
-                .orElseThrow(() -> new IllegalArgumentException("채팅방을 찾을 수 없습니다."));
+        ChatRoom room = getRoom(roomId);
+        ensureParticipant(room, senderId);
+
         User sender = userRepository.findById(senderId)
                 .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
@@ -73,5 +68,18 @@ public class ChatService {
                 .build();
 
         return ChatMessageDto.from(chatMessageRepository.save(message));
+    }
+
+    private ChatRoom getRoom(Long roomId) {
+        return chatRoomRepository.findById(roomId)
+                .orElseThrow(() -> new IllegalArgumentException("채팅방을 찾을 수 없습니다."));
+    }
+
+    private void ensureParticipant(ChatRoom room, Long userId) {
+        boolean isParticipant = companionParticipantRepository
+                .existsByCompanionPostIdAndUserId(room.getCompanionPost().getId(), userId);
+        if (!isParticipant) {
+            throw new IllegalStateException("채팅방 참여자만 접근할 수 있습니다.");
+        }
     }
 }
